cmake_minimum_required(VERSION 3.15)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode652 leetcode652.cpp)
add_executable(leetcode315 leetcode315.cpp)
add_executable(leetcode493 leetcode493.cpp)
add_executable(leetcode494 leetcode494.cpp)
add_executable(leetcode495 leetcode495.cpp)
add_executable(leetcode496 leetcode496.cpp)
add_executable(leetcode5 leetcode5.cpp)
add_executable(leetcode53 leetcode53.cpp)
add_executable(leetcode85 leetcode85.cpp)
add_executable(leetcode84 leetcode84.cpp)
add_executable(leetcode1 leetcode1.cpp)
add_executable(leetcode535 leetcode535.cpp)